[package]
name = "croncat-pipeline"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
keywords = ["croncat", "pipeline", "async", "streaming", "data", "processing", "topology"]
description = "A streaming data processing pipeline for croncat"
repository = "https://github.com/CronCats/croncat-pipeline"
homepage = "https://github.com/CronCats/croncat-pipeline"
documentation = "https://docs.rs/croncat-pipeline"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
color-eyre = "0.6.2"
futures = "0.3.24"
tokio = { version = "1.21.2", features = ["macros", "rt", "sync", "time"] }
